[gd_scene load_steps=11 format=2]

[ext_resource path="res://Sprites/blue_pp.png" type="Texture" id=1]
[ext_resource path="res://Sprites/green_pp.png" type="Texture" id=2]
[ext_resource path="res://Sprites/purple_pp.png" type="Texture" id=3]
[ext_resource path="res://pixeboy-font/Pixeboy-z8XGD.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Sprites/totalscoreWin.png" type="Texture" id=5]
[ext_resource path="res://Sprites/red_pp.png" type="Texture" id=6]
[ext_resource path="res://FirstPlace.gd" type="Script" id=7]
[ext_resource path="res://TotalScoreWindow.gd" type="Script" id=8]

[sub_resource type="DynamicFontData" id=1]

[sub_resource type="DynamicFont" id=2]
size = 24
outline_color = Color( 0.988235, 0.988235, 0.988235, 1 )
font_data = ExtResource( 4 )
fallback/0 = SubResource( 1 )

[node name="TotalScoreWindow" type="Node2D"]
script = ExtResource( 8 )
__meta__ = {
"_edit_group_": true
}

[node name="Window" type="Sprite" parent="."]
position = Vector2( 637, 190.311 )
scale = Vector2( 1.65982, 1.52544 )
texture = ExtResource( 5 )

[node name="FirstPlace" type="Node2D" parent="."]
position = Vector2( 0.1, 0 )
script = ExtResource( 7 )
__meta__ = {
"_edit_group_": true
}

[node name="GreenFace" type="Sprite" parent="FirstPlace"]
position = Vector2( 616.076, 128.5 )
scale = Vector2( 1.57454, 1.49075 )
texture = ExtResource( 2 )

[node name="BlueFace" type="Sprite" parent="FirstPlace"]
position = Vector2( 616.076, 128.5 )
scale = Vector2( 1.57454, 1.49075 )
texture = ExtResource( 1 )

[node name="RedFace" type="Sprite" parent="FirstPlace"]
position = Vector2( 616.076, 128.5 )
scale = Vector2( 1.57454, 1.49075 )
texture = ExtResource( 6 )

[node name="PurpleFace" type="Sprite" parent="FirstPlace"]
position = Vector2( 616.076, 128.5 )
scale = Vector2( 1.57454, 1.49075 )
texture = ExtResource( 3 )

[node name="Score" type="Label" parent="FirstPlace"]
margin_left = 643.654
margin_top = 119.26
margin_right = 666.654
margin_bottom = 138.26
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SecondPlace" type="Node2D" parent="."]
position = Vector2( 0.1, 46 )
__meta__ = {
"_edit_group_": true
}

[node name="GreenFace" type="Sprite" parent="SecondPlace"]
position = Vector2( 616.076, 128.5 )
scale = Vector2( 1.57454, 1.49075 )
texture = ExtResource( 2 )

[node name="BlueFace" type="Sprite" parent="SecondPlace"]
position = Vector2( 616.076, 128.5 )
scale = Vector2( 1.57454, 1.49075 )
texture = ExtResource( 1 )

[node name="RedFace" type="Sprite" parent="SecondPlace"]
position = Vector2( 616.076, 128.5 )
scale = Vector2( 1.57454, 1.49075 )
texture = ExtResource( 6 )

[node name="PurpleFace" type="Sprite" parent="SecondPlace"]
position = Vector2( 616.076, 128.5 )
scale = Vector2( 1.57454, 1.49075 )
texture = ExtResource( 3 )

[node name="Score" type="Label" parent="SecondPlace"]
margin_left = 643.654
margin_top = 119.26
margin_right = 666.654
margin_bottom = 138.26
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ThirdPlace" type="Node2D" parent="."]
position = Vector2( 0.1, 92 )
__meta__ = {
"_edit_group_": true
}

[node name="GreenFace" type="Sprite" parent="ThirdPlace"]
position = Vector2( 616.076, 128.5 )
scale = Vector2( 1.57454, 1.49075 )
texture = ExtResource( 2 )

[node name="BlueFace" type="Sprite" parent="ThirdPlace"]
position = Vector2( 616.076, 128.5 )
scale = Vector2( 1.57454, 1.49075 )
texture = ExtResource( 1 )

[node name="RedFace" type="Sprite" parent="ThirdPlace"]
position = Vector2( 616.076, 128.5 )
scale = Vector2( 1.57454, 1.49075 )
texture = ExtResource( 6 )

[node name="PurpleFace" type="Sprite" parent="ThirdPlace"]
position = Vector2( 616.076, 128.5 )
scale = Vector2( 1.57454, 1.49075 )
texture = ExtResource( 3 )

[node name="Score" type="Label" parent="ThirdPlace"]
margin_left = 643.654
margin_top = 117.26
margin_right = 666.654
margin_bottom = 136.26
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ForthPlace" type="Node2D" parent="."]
position = Vector2( 0.1, 136 )
__meta__ = {
"_edit_group_": true
}

[node name="GreenFace" type="Sprite" parent="ForthPlace"]
position = Vector2( 616.076, 128.5 )
scale = Vector2( 1.57454, 1.49075 )
texture = ExtResource( 2 )

[node name="BlueFace" type="Sprite" parent="ForthPlace"]
position = Vector2( 616.076, 128.5 )
scale = Vector2( 1.57454, 1.49075 )
texture = ExtResource( 1 )

[node name="RedFace" type="Sprite" parent="ForthPlace"]
position = Vector2( 616.076, 128.5 )
scale = Vector2( 1.57454, 1.49075 )
texture = ExtResource( 6 )

[node name="PurpleFace" type="Sprite" parent="ForthPlace"]
position = Vector2( 616.076, 128.5 )
scale = Vector2( 1.57454, 1.49075 )
texture = ExtResource( 3 )

[node name="Score" type="Label" parent="ForthPlace"]
margin_left = 643.654
margin_top = 117.26
margin_right = 666.654
margin_bottom = 136.26
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
